main.scss
---
---
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:wght@500;600&display=swap');

$primary: #002347;
$secondary: #fdc632;
$background: #ffffff;
$on-background: #212121;
$on-background-border: #e7e7e7;
$on-primary: #e0e0e0;
$on-secondary: #212121;

$border-radius: 3px;
$logo-width: 70px;
$logo-height: 70px;
$logo-width-sm: 50px;
$logo-height-sm: 50px;
$logo-overlay-offset: 10px;

@mixin button($background, $text, $border) {
  display: inline-block;
  background: $background;
  padding: 0 25px;
  color: $text;
  font-size: 13px;
  font-weight: 500;
  line-height: 36px;
  border-radius: $border-radius;
  border: 1px solid $border;
  text-align: center;
  text-transform: uppercase;
  cursor: pointer;
  font-family: Rubik, sans-serif;
  text-decoration: none;
  margin: 4px 2px 10px 0;
  &:hover {
    background-color: darken($background, 10);
    border-color: darken($border, 10);
  }
  &:active {
    background-color: darken($background, 20);
    border-color: darken($border, 20);
  }
  &:focus {
    outline: none;
  }
}

.img-logo-overlay {
  width: $logo-width-sm;
  height: $logo-height-sm;
  position: relative;
  top: $logo-overlay-offset;
  left: calc(100% - #{$logo-width-sm} - #{$logo-overlay-offset});
  opacity: 0.5;
}
img.hidden {
  display: none;
}
.logo {
  width: $logo-width;
  height: $logo-height;
  fill: $on-primary;
  stroke: $on-primary;
  text-align: center;
  left: 50%;
  transform: translate(-50%, 0);
  position: relative;
}
.hide-desktop {
  @media (min-width: 901px) {
    display: none;
  }
}
.hide-mobile {
  @media (max-width: 900px) {
    display: none;
  }
}
html, body {
  margin: 0;
  padding: 0;
}
h1 {
  font-family: Rubik, sans-serif;
  font-size: 20px;
  font-weight: 500;
}
h2 {
  font-family: Rubik, sans-serif;
  font-size: 40px;
  font-weight: 500;
  text-align: center;
  @media (max-width: 900px) {
    font-size: 32px;
  }
}
h3 {
  font-family: Rubik, sans-serif;
  font-size: 32px;
  font-weight: 600;
  text-align: center;
  margin: 10px 0;
}
h4 {
  font-family: Rubik, sans-serif;
  font-size: 20px;
  font-weight: 500;
  text-align: left;
  margin: 10px 0;
}
p, li {
  font-family: Roboto, sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
}
p, ul, ol {
  margin: 10px 0;
}
p.subtitle {
  font-size: 16px;
  font-style: italic;
  text-align: center;
  margin-bottom: 36px;
  margin-top: -4px
}
header {
  height: 60px;
  position: sticky;
  top: 0;
  background-color: $background;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.1), 0 4px 5px 0 rgba(0,0,0,0.07), 0 1px 10px 0 rgba(0,0,0,0.06);
  overflow: hidden;
  div.title {
    float: left;
    h1 {
      line-height: 60px;
      color: $primary;
      margin: 0;
      display: inline-block;
      position: absolute;
      left: 100px;
      transition: left 0.2s;
      @media (max-width: 900px) {
        left: 70px;
      }
      span {
        @media (max-width: 400px) {
          display: none;
        }
      }
    }
    svg#menu {
      width: 24px;
      height: 24px;
      padding: 17px 18px 19px 18px;
      font-size: 24px;
      position: absolute;
      opacity: 0;
      left: -20px;
      transition: left 0.2s, opacity 0.2s;
      fill: $primary;
      @media (max-width: 900px) {
        opacity: 1;
        left: 0
      }
    }
    svg#logo {
      width: 50px;
      height: 50px;
      padding: 5px;
      position: absolute;
      left: 20px;
      transition: left 0.2s, opacity 0.2s;
      fill: $primary;
      stroke: $primary;
      @media (max-width: 900px) {
        left: 0;
        opacity: 0;
      }
    }
  }
  div.main-button {
    float: right;
    a {
      @include button($primary, $secondary, $primary);
      margin: 11px;
    }
  }
  div.nav {
    float: right;
    @media (max-width: 900px) {
      position: absolute;
      top: 60px;
    }
    a {
      height: 60px;
      line-height: 60px;;
      text-decoration: none;
      color: $primary;
      font-weight: 500;
      font-family: Rubik, sans-serif;
      padding: 21px 15px;
      transition: padding 0.2s;
      &:hover {
        background-color: $primary;
        color: $secondary;
      }
      &:active {
        background-color: $secondary;
        color: $primary;
      }
      @media (max-width: 900px) {
        display: block;
        width: 100vw;
        padding: 0 18px;
      }
      @media (max-width: 1000px) and (min-width: 901px) {
        padding: 21px 4px;
      }
      @media (max-width: 1200px) and (min-width: 1001px) {
        padding: 21px 10px;
      }
    }
  }
}
section, footer {
  scroll-margin-top: 60px;
  container {
    display: block;
    max-width: 1140px;
    padding-bottom: 100px;
    padding-left: 20px;
    padding-right: 20px;
    margin: auto;
    h1, h2, h3, h4, a {
      color: $primary;
    }
    .btn, input[type="submit"] {
      @include button($background, $primary, $primary);
    }
  }
  &.color {
    background-color: $primary;
    container {
      padding-top: 100px;
      h1, h2, h3, h4 {
        color: $on-primary;
      }
      a {
        color: $secondary;
      }
      p, li {
        color: $on-primary;
      }
      .btn, input[type="submit"] {
        @include button($secondary, $primary, $secondary);
      }
    }
    + section {
      container {
        padding-top: 100px;
      }
    }
  }
}
article {
  padding-bottom: 26px;
}
#cta container {
  p {
    font-family: Rubik, sans-serif;
  font-size: 30px;
  font-weight: 500;
  text-transform: uppercase;
  }
  > div {
    text-align: center;
  }
}
#about container {
  > div {
    display: flex;
    @media (max-width: 900px) {
      flex-direction: column;
    }
    > div {
      box-shadow: 0px 1px 5px 1px $on-background-border;
      border-radius: $border-radius;
      flex-grow: 1;
      flex-basis: 1px;
      padding: 15px;
      margin: 0 15px;
      @media (max-width: 900px) {
        margin: 5px 0;
      }
    }
  }
}
#masks container {
  > div {
    display: flex;
    @media (max-width: 700px) {
      flex-direction: column-reverse;
    }
    > div {
      flex-grow: 1;
      padding: 0 15px;
      margin: 0 15px;
    }
    .face-masks-image-wrapper {
      padding: 0;
      background-image: url(/files/hunt-thanks.jpg);
      background-size: contain;
      background-repeat: no-repeat;
      background-position-x: center;
      background-position-y: top;
      min-width: 400px;
      @media (max-width: 800px) {
        min-width: 350px;
      }
      @media (max-width: 750px) {
        min-width: 300px;
      }
      @media (max-width: 700px) {
        min-width: unset;
        min-height: 350px;
        background-size: cover;
        background-position-y: center;
      }
      @media (max-width: 550px) {
        min-height: 250px;
      }
    }
  }
}
#howHelp container {
  > h2 {
    text-align: left;
  }
  > div {
    display: grid;
    grid-template-columns: 1fr 400px;
    grid-gap: 30px;
    @media (max-width: 900px) {
      grid-template-columns: 1fr 300px;
    }
    @media (max-width: 800px) {
      grid-template-columns: 1fr 250px;
    }
    @media (max-width: 750px) {
      grid-template-columns: 1fr 200px;
    }
    @media (max-width: 600px) {
      grid-template-columns: 1fr;
      grid-template-rows: 1fr 1fr;
    }
    iframe {
      border-radius: $border-radius;
    }
    > div#contact {
      scroll-margin-top: 60px;
      display: none;
      label {
        font-size: 15px;
        display: block;
        font-family: Rubik, sans-serif;
        color: $on-primary;
      }
      input:not([type="submit"]), textarea {
        background-color: $primary;
        color: $on-primary;
        border: 2px solid rgba($on-primary, 0.2);
        border-radius: $border-radius;
        min-height: 36px;
        display: block;
        font-size: 16px;
        font-family: Roboto, sans-serif;
        margin: 3px 0 6px 0;
        width: 100%;
        &:hover {
          border-color: rgba($on-primary, 0.3);
        }
        &:focus, &:active {
          outline: none;
          border-color: $secondary;
        }
      }
    }
  }
}
#sponsors container {
  text-align: center;
  > div {
    display: inline-block;
    padding: 0 14px;
    > a img {
      max-height: 140px;
      @media (max-width: 900px) {
        max-height: 100px;
      }
    }
  }
}
footer container {
  > div {
    display: grid;
    grid-template-columns: 1fr 300px 1fr;
    grid-gap: 30px;
    @media (max-width: 900px) {
      grid-template-columns: 1fr 1fr;
    }
    @media (max-width: 450px) {
      grid-template-columns: 1fr;
    }
  }
  .footer-image-div {
    @media (max-width: 900px) {
      grid-row: 2;
      text-align: right;
    }
    @media (max-width: 450px) {
      grid-row: 1;
      text-align: center;
    }
    svg {
      max-height: 300px;
      max-width: 300px;
      fill: $on-primary;
      stroke: $on-primary;
      @media (max-width: 900px) and (min-width: 450px) {
        max-width: 100%;
      }
    }
  }
  .footer-desc {
    text-align: right;
    @media (max-width: 900px) {
      grid-row: 1;
      grid-column: 1 / span 2;
    }
    @media (max-width: 900px) {
      text-align: center;
    }
    @media (max-width: 450px) {
      display: none;
    }
    p:first-of-type {
      font-family: Rubik, sans-serif;
      font-size: 22px;
    }
    p {
      font-size: 15px;
      line-height: 1.6;
    }
  }
  .footer-pages-list {
    @media (max-width: 900px) {
      grid-row: 2;
    }
    @media (max-width: 450px) {
      text-align: center;
    }
    p:first-of-type {
      font-family: Rubik, sans-serif;
      font-size: 22px;
    }
    a {
      font-size: 15px;
      line-height: 1.6;
      display: block;
      font-family: Rubik, sans-serif;
    }
  }
}
#photoGallery container {
  padding-top: 20px;
  padding-bottom: 20px;
  .gallery {
    columns: 369px 3;
    column-gap: 10px;
    figure {
      margin: 10px 0;
      &:first-of-type {
        margin-top: 0;
      }
      &:last-of-type {
        margin-bottom: 0;
      }
      img {
        max-width: 100%;
      }
    }
  }
}
*:focus-visible {
  outline: 2px solid #7c7c7c;
  outline-offset: -2px;
} 

